ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: connectwe-ingress
  namespace: connectwe-ns

spec:
  ingressClassName: nginx

  rules:
    - host: connectwe.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: connectwe-service-frontend
                port:
                  number: 8081
